--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </STYLE>
 </head>
 <body>
-    site undergoing construction. You're probably looking for these 2 simulation projects
+    You're probably looking for these 2 simulation projects
     <ul>
         <li><a href="projects/HOV + Ramp PHASE 2">HOV + Ramp PHASE 2</a></li>
         <li><a href="projects/On Ramp PHASE 1">On Ramp PHASE 1</a></li>
