--- a/new/index.html
+++ b/new/index.html
@@ -49,7 +49,7 @@
         <div class="text-vertical-center">
             <h1>Hi, this is George</h1>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">nice to meed you George</a>
+            <a href="#about" class="btn btn-dark btn-lg">nice to meet you George</a>
         </div>
     </header>
 
