--- a/new/index.html
+++ b/new/index.html
@@ -47,9 +47,9 @@
 
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Hi, this is George</h1>
+            <h1>Georges Arnaout, Ph.D.</h1>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">nice to meet you George</a>
+            <a href="#about" class="btn btn-dark btn-lg">Find out more</a>
         </div>
     </header>
 
