--- a/new/index.html
+++ b/new/index.html
@@ -84,35 +84,11 @@
                             <div>
                                 Traffic Operations and Control (reducing traffic congestion)
                             </div>
-                            <div>
-                                Microscopic simulation model progress, aka <a href="#projects-fast">F.A.S.T</a>
-                            </div>
-                            <div>
-                                Android Micro-Navigation Application <a href="http://locode.com" target="_blank">locode.com</a>
-                            </div>
+                           
 
                         <h3>Biography</h3>
-                            <p> I was born in Koura, Lebanon in 1986, but also am very proud of my Armenian heritage from my mother's side.
-
-                                Also, Georges took pleasure in being the President of the F.O.R.E.I.G.N.E.R.S. for 2 years - an international organization that promotes International-American relations through purely social and entertaining means (voted the best student organization in Old Dominion University for year 2008-2009).
-
-                                <h4>Hobbies:</h4>
-                                Mixed Martial Arts, Music (composing), TRX , Cross-fit, Snowboarding, and Reading (especially books as Freakonomics, The Starfish and the Spider, and Rich Dad Poor Dad)
-
-                                Georges took pleasure of playing Electric Guitar alongside the best DJs in the Hampton roads area (Dj Vitali, Dj KoKo, Dj Kristo, and Dj MC). Also, Georges played regularly in the following venues: Omega, Scotty Quixx, and Time Lounge. Currently, he is
-                                playing in a 2-person band (Neimer Ft. GEO) that is the resident band on Wednesdays at Savlatore's (Seaport, Boston) >>> https://www.facebook.com/geoguitar
-
-                                Georges has a passion for challenges. One of the challenges he pursued was Competitive Fighting. Check Georges' fighting Blog to find out WHY he's into this type of extreme sports and how it exactly felt stepping in the cage:
-
-                                http://insanomania911.blogspot.com/
-
-                                <h4>Favorite Quotes:</h4>
-                                    <blockquote>Justice is served to those who can afford it (Unknown Author)</blockquote>
-                                    <blockquote>If one does not know to which port one is sailing, no wind is favorable. (Lucius Seneca)</blockquote>
-                                        <blockquote>Good artists copy, great artists steal (Picasso)</blockquote>
-                                            <blockquote>Be fearful when others are greedy and greedy when others are fearful (Warren Buffet)</blockquote>
-                                                <blockquote>Everybody is a genius. But if you judge a fish by its ability to climb a tree, it will live its whole life believing that it is stupid (Albert Einstein)</blockquote>
-                            </p>
+                            <p> Dr. Arnaout is a Simulation Tools Developer & Analyst in the Research & Development team at Kiva Systems (Amazon.com subsidiary). Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) from Old Dominion University, Norfolk, VA. </p>
+                                
                     </div>
                 </div>
             </div>
