--- a/new/index.html
+++ b/new/index.html
@@ -34,7 +34,7 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#services">Projects</a>
+                <a href="#services">Research Projects</a>
             </li>
             <li>
                 <a href="#portfolio">Portfolio</a>
@@ -63,7 +63,7 @@
                         <h3>Education:</h3>
                             <div>
                                 Ph.D. - Engineering Management and Systems Engineering Conc: Modeling and Simulation
-                                <span class="text-muted"> - 2012, Old Dominion University, VA</span>
+                                <span class="text-muted"> - 2011, Old Dominion University, VA</span>
                             </div>
                             <div>
                                 M.S., Computer Science
@@ -87,7 +87,7 @@
                            
 
                         <h3>Biography</h3>
-                            <p> Dr. Arnaout is a Simulation Tools Developer & Analyst in the Research & Development team at Kiva Systems (Amazon.com subsidiary). Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) from Old Dominion University, Norfolk, VA. </p>
+                            <p> Dr. Arnaout is a Simulation Tools Developer & Analyst in the Research & Development team at Kiva Systems (Amazon.com subsidiary). Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) at Old Dominion University, Norfolk, VA. </p>
                                 
                     </div>
                 </div>
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>My Projects</h2>
+                    <h2>Research Projects</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -113,9 +113,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Project 1</strong>
+                                    <strong>F.A.S.T.</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Flexible Adaptive Simulator of Traffic.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -126,9 +126,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Project 2</strong>
+                                    <strong>LoCode</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>LoCode is a geographic coding scheme that converts latitudinal and longitudinal coordinates into an eight digit code (e.g. T8R5-RTJU) for a particular region of the world.  </p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -139,9 +139,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Project 3</strong>
+                                    <strong>University Maps</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Micro-navigation in large universities using Android platform.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
