--- a/new/index.html
+++ b/new/index.html
@@ -37,7 +37,7 @@
                 <a href="#services">Research Projects</a>
             </li>
             <li>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#portfolio">Awards</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -171,7 +171,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>I'm awesome!</h1>
+            <h1>You never fail until you stop trying (Albert Einstein)</h1>
         </div>
     </aside>
 
@@ -180,7 +180,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                    <h2>Awards</h2>
+                    <p>* Alumni Association Scholarship (alumnus) - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010) [$1500]
+
+* Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010)  [$20,000 + Tuition Waiver]
+
+* Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management  (2010-2011) [$20,000 + Tuition Waiver] - Renewed</p>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
