--- a/new/index.html
+++ b/new/index.html
@@ -145,19 +145,7 @@
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Project 4</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
+                        
                     </div>
                     <!-- /.row (nested) -->
                 </div>
@@ -181,41 +169,26 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Awards</h2>
-                    <p>* Alumni Association Scholarship (alumnus) - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010) [$1500]
-
-* Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010)  [$20,000 + Tuition Waiver]
-
-* Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management  (2010-2011) [$20,000 + Tuition Waiver] - Renewed</p>
+                    <p>Alumni Association Scholarship (alumnus) - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010) [$1500]</p>
+<p>Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management (2009-2010)  [$20,000 + Tuition Waiver]</p>
+<p>Dean's Doctoral Fellowship Award - Batten College of Engineering and Technology - Georges M. Arnaout, Ph.D. Systems Engineering and Engineering Management  (2010-2011) [$20,000 + Tuition Waiver] - Renewed</p>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/omicron.jpeg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/GK.gif">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
-                            </div>
-                        </div>
+                      
                     </div>
                     <!-- /.row (nested) -->
                     <a href="#" class="btn btn-dark">View More Items</a>
