--- a/new/index.html
+++ b/new/index.html
@@ -184,7 +184,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/GK.gif">
+                                    <img class="img-portfolio img-responsive" src="https://1d402649-a-62cb3a1a-s-sites.googlegroups.com/site/georgearnaout/awards/GKSeal_trans.gif?attachauth=ANoY7co7C-OXVltvjk_0fpnGYooqk9rkr9gQuqhobhpw6ppMpibWmnDW30Wm5DuG5RCWKIdhSoxngPp-kmaVP1Ovs4AWUAt28bpeCZf7xFRlJYh08cWwNoR_fHIUSQFOKZvwmHcSUPl4VsI2wa0umRpiwM_3CC-87DR27bdTIDWNz69p7sNOABhYlEF1ceL-53Sp0XpCIA__l96h6TbuuyHJZjQXQlbs4C-zXAifbBFy-DcZucZZDPo%3D&attredirects=0">
                                 </a>
                             </div>
                         </div>
