--- a/new/index.html
+++ b/new/index.html
@@ -210,16 +210,15 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Journal Papers</h2>
-                    <p>Journal Publications 
-Arnaout, Georges, Arnaout, J-P "Exploring the effects of Cooperative Adaptive Cruise Control on Highway traffic flow", Transportation Planning and Technology (gTPT) (  Published )
+                    <p><b>Journal Publications </b></p>
+<p>Arnaout, Georges, Arnaout, J-P "Exploring the effects of Cooperative Adaptive Cruise Control on Highway traffic flow", Transportation Planning and Technology (gTPT) (  Published )</p>
 
-Arnaout, Georges, Arbabi, Hadi , Bowling, Shannon, “Effective Cooperative Adaptive Cruise Control algorithm for Intelligent Transportation Systems",   International Journal of Robotics and Automation ( accepted )
+<p>Arnaout, Georges, Arbabi, Hadi , Bowling, Shannon, “Effective Cooperative Adaptive Cruise Control algorithm for Intelligent Transportation Systems",   International Journal of Robotics and Automation ( accepted )</p>
 
-Arnaout, Georges, Bowling, Shannon "Towards Reducing Traffic Congestion using Cooperative Adaptive Cruise Control on a Freeway with a Ramp", Journal of Industrial Engineering and Management (Published)
+<p>Arnaout, Georges, Bowling, Shannon "Towards Reducing Traffic Congestion using Cooperative Adaptive Cruise Control on a Freeway with a Ramp", Journal of Industrial Engineering and Management (Published)</p>
 
-Arnaout, Georges, Bowling, Shannon, "A Progressive Deployment Strategy for Cooperative Adaptive Cruise Control to Improve Traffic Dynamics", International Journal of Automation and Computing  (Published)
-
-</p>
+<p>Arnaout, Georges, Bowling, Shannon, "A Progressive Deployment Strategy for Cooperative Adaptive Cruise Control to Improve Traffic Dynamics", International Journal of Automation and Computing  (Published)</p>
+ 
                     
                       
                     </div>
