--- a/new/index.html
+++ b/new/index.html
@@ -270,12 +270,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     
-                        <h4><strong>Contact</strong>
-                    </h4>
+                        <h2><strong>Contact</strong> </h2>
                      
                     <ul class="list-unstyled">
                         <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:georgearnaout@gmail.com">name@example.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:georgearnaout@gmail.com">Email</a>
                         </li>
                     </ul>    
                     </div>
