--- a/new/index.html
+++ b/new/index.html
@@ -121,7 +121,7 @@
                                     <strong>F.A.S.T.</strong>
                                 </h4>
                                 <p>Flexible Adaptive Simulator of Traffic.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="https://sites.google.com/site/georgearnaout/odusim" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -134,7 +134,7 @@
                                     <strong>LoCode</strong>
                                 </h4>
                                 <p>LoCode is a geographic coding scheme that converts latitudinal and longitudinal coordinates into an eight digit code (e.g. T8R5-RTJU) for a particular region of the world.  </p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="http://locode.com/" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -147,7 +147,7 @@
                                     <strong>University Maps</strong>
                                 </h4>
                                 <p>Micro-navigation in large universities using Android platform.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="http://locode.com/unimapsapp.php" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         
