Update to main page

--- a/new/index.html
+++ b/new/index.html
@@ -79,6 +79,9 @@
                                 <span class="text-muted"> - 2006, University of Balamand, Kalhat (Lebanon)</span>
                             </div>
 
+							  <img class="img-portfolio img-responsive" src="img/profile.png">
+							  
+							  
                         <h3>Research Interests:</h3>
                             <div>
                                 Modeling and Simulation - ABM and Discrete Event (transportation, robotics, and human behavior).
@@ -181,14 +184,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="http://odk.org">
                                     <img class="img-portfolio img-responsive" src="img/omicron.jpeg">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="https://www.goldenkey.org">
                                     <img class="img-portfolio img-responsive" src="img/GJ.gif">
                                 </a>
                             </div>
