--- a/new/index.html
+++ b/new/index.html
@@ -124,7 +124,7 @@
                                     <strong>F.A.S.T.</strong>
                                 </h4>
                                 <p>Flexible Adaptive Simulator of Traffic.</p>
-                                <a href="garnaout.github.io/index.html" class="btn btn-light">Learn More</a>
+                                <a href="http://garnaout.github.io/index.html" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
