--- a/new/index.html
+++ b/new/index.html
@@ -216,9 +216,9 @@
                     
                     <p>	Arnaout, Georges, Arnaout, J-P (2014) "Exploring the effects of Cooperative Adaptive Cruise Control on Highway traffic flow", Transportation Planning and Technology (gTPT) Volume 37, Issue 2</p>
        
-<p> Arnaout, Georges, Arbabi, Hadi , Bowling, Shannon, “Effective Cooperative Adaptive Cruise Control algorithm for Intelligent Transportation Systems",   International Journal of Robotics and Automation ( accepted )</p>
+<p> Arnaout, Georges, Arbabi, Hadi , Bowling, Shannon, “Effective Cooperative Adaptive Cruise Control algorithm for Intelligent Transportation Systems",   International Journal of Robotics and Automation, Issue 3, 2015</p>
 <p>	Arnaout, Georges, Bowling, Shannon (2011) "Towards Reducing Traffic Congestion using Cooperative Adaptive Cruise Control on a Freeway with a Ramp", Journal of Industrial Engineering and Management, Volume 4, No 4</p>
-<p>	Arnaout, Georges, Bowling, Shannon, (2014) "A Progressive Deployment Strategy for Cooperative Adaptive Cruise Control to Improve Traffic Dynamics", International Journal of Automation and Computing , Volume 11, issue</p> 
+<p>	Arnaout, Georges, Bowling, Shannon, (2014) "A Progressive Deployment Strategy for Cooperative Adaptive Cruise Control to Improve Traffic Dynamics", International Journal of Automation and Computing , Volume 11, Issue 1</p> 
 <p>	Arnaout, J-P., and Arnaout, G. Simulation and Optimization of Ant Colony Optimization Algorithm for the Euclidean location-allocation problem with Stochastic Demand, Journal of Industrial and Management Optimization, Under Review</p>
 
   
