--- a/new/index.html
+++ b/new/index.html
@@ -255,6 +255,7 @@
 <p>Intelligent Transportation System Real Time Traffic Speed Prediction with Minimal Data Journal Section	Information Systems, Technology and Communication (Journal of Industrial Engineering and Management) </p>
 <p>Passenger share research of different transport modes based on the travel behavior analysis (Journal of Industrial Engineering and Management) </p>
 <p>Road Matrix navigation system for intelligent vehicles - Journal of Advanced Transportation </p>
+<p>A Genetic Algorithm Optimized Fuzzy Logic Controller to Avoid Rear-end Collisions - Journal of Advanced Transportation </p>
                       
                     </div>
                     
