--- a/new/index.html
+++ b/new/index.html
@@ -252,10 +252,10 @@
  <h2>Technical reviewer for journal publications </h2>
  
 <p>"A solution for urban road selection and construction problem using simulation and goal programming - Case study of the City Isfahan" for Journal of Advanced Transportation </p>
-<p>Intelligent Transportation System Real Time Traffic Speed Prediction with Minimal Data Journal Section	Information Systems, Technology and Communication (Journal of Industrial Engineering and Management) </p>
+<p>Intelligent Transportation System Real Time Traffic Speed Prediction with Minimal Data (Journal of Industrial Engineering and Management) </p>
 <p>Passenger share research of different transport modes based on the travel behavior analysis (Journal of Industrial Engineering and Management) </p>
-<p>Road Matrix navigation system for intelligent vehicles - Journal of Advanced Transportation </p>
-<p>A Genetic Algorithm Optimized Fuzzy Logic Controller to Avoid Rear-end Collisions - Journal of Advanced Transportation </p>
+<p>Road Matrix navigation system for intelligent vehicles (Journal of Advanced Transportation) </p>
+<p>A Genetic Algorithm Optimized Fuzzy Logic Controller to Avoid Rear-end Collisions (Journal of Advanced Transportation) </p>
                       
                     </div>
                     
