--- a/new/index.html
+++ b/new/index.html
@@ -95,7 +95,7 @@
                            
 
                         <h3>Biography</h3>
-                            <p> Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) at Old Dominion University, Norfolk, VA.  Georges has a passion for joining early stage startups.  Georged joined Kiva Systems (now Amazon Robotics) as a Simulation Developer in the Research & Development team in 2011.  Kiva was acquired by Amazon in 2012 and rebranded to Amazon Robotics in 2015.  After the acquisition, Georges joined a new startup called Cloudhealth Technologies that is pioneering the Cloud ITSM industry as Head of Technical Account Management.  </p>
+                            <p> Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) at Old Dominion University, Norfolk, VA.  Passionate about joining early stage startups,  George joined Kiva Systems (now Amazon Robotics) as a Simulation Developer as part of the Research & Development team in 2011.  Kiva was later acquired by Amazon and rebranded to Amazon Robotics in 2015.  After the acquisition, Georges joined a new startup called Cloudhealth Technologies that is pioneering the Cloud ITSM industry. In his recent role as the Head of Technical Account Management, George is leveraging his technical expertise in order to ensure the success of the customers.  </p>
                                 
                     </div>
                 </div>
