--- a/new/index.html
+++ b/new/index.html
@@ -84,13 +84,16 @@
 							  
                         <h3>Research Interests:</h3>
                             <div>
-                                Modeling and Simulation - ABM and Discrete Event (transportation, robotics, and human behavior).
+                                Modeling and Simulation - ABM and Discrete Event (transportation, robotics, and human behavior)
                             </div>
                             <div>
-                                Intelligent Transportation Systems, Cooperative Adaptive Cruise Control.
+                                Intelligent Transportation Systems, Cooperative Adaptive Cruise Control
                             </div>
                             <div>
                                 Traffic Operations and Control (reducing traffic congestion)
+                            </div>
+                             <div>
+                                Cloud Analytics / Cloud Optimization / Cloud ITSM
                             </div>
                            
 
