--- a/new/index.html
+++ b/new/index.html
@@ -66,7 +66,7 @@
 			
                     <h2>About me</h2>
                     <div class="text-left">
-			    A creative thinker, problem solver and decision maker who effectively prioritizes tasks with the mission of the organization. Strong communication, interpersonal relations, mentoring, project management and organizational skills with passion for scaling high growth tech businesses. 
+			    <p> A creative thinker, problem solver and decision maker who effectively prioritizes tasks with the mission of the organization. Strong communication, interpersonal relations, mentoring, project management and organizational skills with passion for scaling high growth tech businesses.  </p>
 
 Specialties: Business strategy & analytics, customer advocacy, SaaS solution sales, account management, Project Management, cloud ITSM, cloud computing, AWS, customer success, cloud cost optimization, agent-based simulation, discrete event simulation, simulation modeling, intelligent transportation, key performance indicators (KPIs), service-level agreement (SLA), customer satisfaction (CSAT), net promoter score (NPS), public speaking, coaching and mentoring.
                         <h3>Education:</h3>
