--- a/new/index.html
+++ b/new/index.html
@@ -285,7 +285,7 @@ Specialties: Business strategy & analytics, customer advocacy, SaaS solution sal
                      
                     <ul class="list-unstyled">
                         <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:georgearnaout@gmail.com">Email</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.linkedin.com/in/garnaout/">LinkedIn</a>
                         </li>
                     </ul>    
                     </div>
