--- a/new/index.html
+++ b/new/index.html
@@ -36,6 +36,10 @@
             <li>
                 <a href="#services">Research Projects</a>
             </li>
+		
+		      <li>
+                <a href="#startups">Startups</a>
+            </li>
             
              <li>
                 <a href="#publications">Publications</a>
