--- a/new/index.html
+++ b/new/index.html
@@ -92,6 +92,10 @@ Specialties: Business strategy & analytics, customer advocacy, SaaS solution sal
 							  
                         <h3>Research Interests:</h3>
                             <div>
+                                Customer Success / Partner Success
+                            </div>
+			    
+			    <div>
                                 Modeling and Simulation - ABM and Discrete Event (transportation, robotics, and human behavior)
                             </div>
                             <div>
