--- a/new/index.html
+++ b/new/index.html
@@ -70,7 +70,14 @@
 			
                     <h2>About me</h2>
                     <div class="text-left">
-			    <p> A creative thinker, problem solver and decision maker who effectively prioritizes tasks with the mission of the organization. Strong communication, interpersonal relations, mentoring, project management and organizational skills with passion for scaling high growth tech businesses.  </p>
+			    <p> Internationally minded leader with passion for start-ups and customer success. Extensive experience building and scaling customer facing teams driving positive business outcomes across the entire customer lifecycle - acquisition, on-boarding, adoption, expansion, and retention.
+
+Highlights:
+• Experience with building and scaling global teams (EMEA, APAC, and AMER)
+• Experience with developing High Touch / white glove treatment programs for Enterprise Customers
+• Experience with developing Tech Touch / automated programs for Commercial Customers (1:many)
+• Track record in maintaining customer net retention consistently over 136% and gross churn below 2%
+• Experience with developing data-driven systems leveraging data science and analytics for better strategic decision making</p>
 
 Specialties: Business strategy & analytics, customer advocacy, SaaS solution sales, account management, Project Management, cloud ITSM, cloud computing, AWS, customer success, cloud cost optimization, agent-based simulation, discrete event simulation, simulation modeling, intelligent transportation, key performance indicators (KPIs), service-level agreement (SLA), customer satisfaction (CSAT), net promoter score (NPS), public speaking, coaching and mentoring.
                         <h3>Education:</h3>
