--- a/new/index.html
+++ b/new/index.html
@@ -138,7 +138,7 @@ Specialties:
                            
 
                         <h3>Biography</h3>
-                           <p> Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) at Old Dominion University, Norfolk, VA. Passionate about joining early stage startups, Georges joined Kiva Systems (now Amazon Robotics) as a Simulation Developer as part of the Research & Development team in 2011. Kiva was later acquired by Amazon and rebranded to Amazon Robotics in 2015. After the acquisition, Georges joined a new startup called Cloudhealth Technologies that is pioneering Cloud ITSM industry. In his recent role as the Director of Customer Success, Georges is leveraging his technical expertise and customer obsession to ensure customer success. </p>
+                           <p> Dr. Arnaout received his Ph.D. in Engineering Management (concentration on simulation) at Old Dominion University, Norfolk, VA. Passionate about joining early stage startups, Georges joined Kiva Systems (now Amazon Robotics) as part of their Client Solutions team in 2011. Kiva was later acquired by Amazon and rebranded to Amazon Robotics in 2015. After the acquisition, Georges joined a new startup called Cloudhealth Technologies that was pioneering Cloud Management industry. In his recent role as the Vice President of Customer Success, Georges is leveraging his technical expertise and customer obsession to ensure customer success is data driven and delivered with heavy focus on customer outcome and customer experience. </p>
      
                     </div>
                 </div>
