--- a/new/index.html
+++ b/new/index.html
@@ -265,6 +265,20 @@ Specialties:
 <p>	Arnaout, J-P., and Arnaout, G. Simulation and Optimization of Ant Colony Optimization Algorithm for the Euclidean location-allocation problem with Stochastic Demand, Journal of Industrial and Management Optimization, Under Review</p>
 
   
+  <h2>Customer Success Presentations </h2>
+  <ul class="list-unstyled">
+                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=SJKcXS4DrZI">Partner Success Presentation at CloudLive with Nick Mehta from Gainsight </a>
+                        </li>
+  </ul>
+  <ul class="list-unstyled">
+                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=R-n5HKA4Xiw">Gainsight Pulse 2018 - Healthscore Evolved</a>
+                        </li>
+  </ul>   
+
+			
+			
   <h2>Book Chapters</h2>
   
   <p>Georges M. Arnaout, Bowling, S. R., “Markov Chains”, Chapter 10 in Bowling, S. R., Introduction to Management Science, OJISE. (to be published)</p>
