--- a/new/index.html
+++ b/new/index.html
@@ -129,9 +129,7 @@ Specialties:
                             <div>
                                 Intelligent Transportation Systems, Cooperative Adaptive Cruise Control
                             </div>
-                            <div>
-                                Traffic Operations and Control (reducing traffic congestion)
-                            </div>
+                         
                              <div>
                                 Cloud Analytics / Cloud Optimization / Cloud ITSM
                             </div>
@@ -266,16 +264,20 @@ Specialties:
 
   
   <h2>Customer Success Presentations </h2>
-  <ul class="list-unstyled">
-                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
+  
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=SJKcXS4DrZI">Partner Success Presentation at CloudLive with Nick Mehta from Gainsight </a>
                         </li>
-  </ul>
+ 
   <ul class="list-unstyled">
                         <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=R-n5HKA4Xiw">Gainsight Pulse 2018 - Healthscore Evolved</a>
                         </li>
-  </ul>   
+  </ul>  
+  <ul class="list-unstyled">
+                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=R-n5HKA4Xiw">Partner Customer Success Trends & Lessons Learned (CloudLive 2020)</a>
+                        </li>
+  </ul>  
 
 			
 			
