--- a/new/index.html
+++ b/new/index.html
@@ -265,20 +265,17 @@ Specialties:
   
   <h2>Customer Success Presentations </h2>
   
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=SJKcXS4DrZI">Partner Success Presentation at CloudLive with Nick Mehta from Gainsight </a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=SJKcXS4DrZI">Partner Success Presentation at CloudLive with Nick Mehta from Gainsight (2019) </a>
                         </li>
  
-  <ul class="list-unstyled">
-                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
+   
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=R-n5HKA4Xiw">Gainsight Pulse 2018 - Healthscore Evolved</a>
                         </li>
-  </ul>  
-  <ul class="list-unstyled">
-                        <!--li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li-->
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=R-n5HKA4Xiw">Partner Customer Success Trends & Lessons Learned (CloudLive 2020)</a>
+ 
+  
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="https://www.youtube.com/watch?v=bBzbQrFQtH0">Partner Customer Success Trends & Lessons Learned (CloudLive 2020)</a>
                         </li>
-  </ul>  
-
+ 
 			
 			
   <h2>Book Chapters</h2>
